# mcp-simple-tool

./: README.md  pyproject.toml
mcp_simple_tool/: __main__.py  server.py
